real time updates - verbose

--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -9,6 +9,8 @@
 
   <%= turbo_frame_tag Quote.new %>
 
+  <%= turbo_stream_from "quotes" %>
+
   <%= turbo_frame_tag "quotes" do %>
     <%= render @quotes %>
   <% end %>
